--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="controls">
+    <div id="container">
+        <!--<nav class="controls">
             <a href="#" class="button" id="start">Start</a>
             <a href="#" class="button" id="stop">Stop</a>
             <a href="#" class="button" id="reset">Reset</a>
         </nav>
         <div class="stopwatch"></div>
-        <ul class="results"></ul>
+        <ul class="results"></ul>-->
     </div>
-    <script type="text/javascript" src="script-compiled.js"></script>
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script> 
+    <script type="text/babel" src="script.js"></script>
 </body>
 
 </html>
